# ThemeSrv

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLibUUID.cmake  buildinfo.cmake
src/: CMakeLists.txt  theme_config.h.in
src/buildinfo/: CMakeLists.txt
src/core/: CMakeLists.txt  build_info.cpp  build_info.h  config_parser.cpp  config_parser.h  endian.h  errors.cpp  errors.h  log.cpp  log.h  uuid.cpp  uuid.h
src/daemon/: CMakeLists.txt  client.h  client_common.cpp  gatekeeper.cpp  gatekeeper.h  main.cpp  server.cpp  server.h
src/io/: CMakeLists.txt  client_base.cpp  client_base.h  epoll.cpp  poll.h  socket.cpp  socket.h  uru_crypt.cpp  uru_crypt.h
src/protocol/: CMakeLists.txt  common.h  common.inl  gatekeeper.h  gatekeeper.inl  net_struct.cpp  net_struct.h  protocol.cpp  protocol.h  protocol_fields_begin.inl  protocol_objects_begin.inl  protocol_objects_end.inl  protocol_structs_begin.inl  protocol_structs_end.inl
